k8s/auth-service-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: signite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: signite/auth-service-dev:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
          name: http
        - containerPort: 50051
          name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: signite
spec:
  selector:
    app: auth-service
  ports:
  - name: http
    port: 80
    targetPort: 8081
  - name: grpc
    port: 50051
    targetPort: 50051
