k8s/sigboard-service-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sigboard-service
  namespace: signite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sigboard-service
  template:
    metadata:
      labels:
        app: sigboard-service
    spec:
      containers:
      - name: sigboard-service
        image: signite/sigboard-service-dev:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8082
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: sigboard-service
  namespace: signite
spec:
  selector:
    app: sigboard-service
  ports:
  - name: http
    port: 80
    targetPort: 8082
